--- a/style.css
+++ b/style.css
@@ -30,10 +30,10 @@ body {
     font-size: 20px;
 }
 
-.nav-link {
+.nav-link, a {
     text-decoration: none;
-    color: black;
-transition: 0.5s;
+    color: white;
+    transition: 0.5s;
 }
 
 .nav-link:hover {
@@ -52,3 +52,48 @@ transition: 0.5s;
 .section {
     width: 50%;
 }
+
+body {
+    font-family: "Roboto", sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.5;
+}
+
+.section-title {
+    font-size: 20px;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+}
+
+.footer-img {
+    background-image: url(https://rs.school/assets/rs-school-CZS_yQWd.webp);
+    width: 100px;
+    height: 100px;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.container-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;  
+    padding: 10px;  
+}
+
+.footer-link, .footer-text{
+    font-size: 25px;
+    color: white;
+}
+
+.header, .footer {
+    background-color: black;
+}
+
+@media (max-width: 768px) {
+    .section {
+        width: 100%;
+    }
+}
+
