--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
     transition: 0.5s;
 }
 
-.nav-link:hover {
+.nav-link:hover, .section-projects:hover, .section-courses:hover {
     color: grey;
 }
 
@@ -51,6 +51,7 @@ body {
 
 .section {
     width: 50%;
+    padding-left: 20px;
 }
 
 body {
@@ -89,6 +90,16 @@ body {
 
 .header, .footer {
     background-color: black;
+}
+
+.section-projects, .section-courses {
+    text-decoration: none;
+    color: black;
+}
+
+.section-code {
+    color: blue;
+    font-size: 15px;
 }
 
 @media (max-width: 768px) {
